--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,13 @@
 name: qibla_finder
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.3.2+3
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  analog_clock: ^0.1.1
   flutter:
     sdk: flutter
   flutter_compass: ^0.8.0
@@ -14,6 +15,8 @@ dependencies:
   geocoding: ^2.1.1
   geolocator: ^10.1.0
   intl: ^0.19.0
+  permission_handler: ^11.1.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
